modules/gdscript/tests/scripts/parser/errors/missing_expression_after_ternary_else.gd
func test():
	var x = 1 if false else
	print("oops")
	print(x)
